SAK-8432 & SAK-12042
git-svn-id: https://source.sakaiproject.org/svn/sam/trunk@40383 66ffb92e-73f9-0310-93c1-f5514f145a0a